# Jarvis

./: .gitignore  README.md  arrancar_backend.bat  arrancar_jarvis.bat  arrancar_ui.ps1  crear_tarea_jarvis.ps1  package-lock.json  package.json
backend/: .env.example  app.py  config.py  jarvis_core.py  requirements.txt  wake_word.py
backend/tests/: test_voz.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  Noticias.css  Noticias.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
