[package]
name = "jarvis"
version = "1.0.0"
description = "Jarvis - Asistente Personal de Voz"
authors = ["Elias Vicencio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
